# LicenseWise

./: .gitignore  PROJECT_STRUCTURE.md  README.md  gradio_app.py  graphs.py  main.py  pyproject.toml  requirements.txt  shell.nix
Docs/: APIs.md  DataSources.md  Inference.md  LicenseWise_Complete_Documentation.md  LicenseWise_System_Behavior.md  Problemdescription.md  QuickTestGuide.md  SystemArch.md  SystemArch.puml  architecture.md  dataflow.puml  inference.puml  knowledge_representation_method.md  licensewise_validation_report_preview.md  requirments_checked.md  test_runs.md
Docs/Case_Studies/: APIs.md
Docs/Legal/: Business_Models.md  Compatibility.md  Compliance.md  Distribution_Terms.md  Jurisdiction.md  Legal_Concepts.md  License_Classification.md  License_Types.md  Linking_Terms.md  Standards.md  index.md
Inference/: Explanation_engine.py  explanation_engine.py  inference_engine.py
Knowledge/: licenses.json  rules.py
Licenses/: README.md  families_merger.py  licenses.json  licenses_template.jsonl
Rules/: rules.py
_Licenses/: README.md  dublicates_checker.py  licenses.json  merge_families.py  template.json
common/: questions.json  suggestions.json
interface/: CLI.py  cli.py  gradio_app.py  style.css
scripts/: gen_report.sh
src/: __init__.py  config.py  main.py
src/Data/: __init__.py  (+2 more)
tests/: conftest.py  test_common.py  test_explanation_engine.py  test_formatting.py  test_license_lookup.py  test_prolog_rules.py  test_rules.pl  test_slint_app.py
ui/: analysis.slint  main.slint  recommendation.slint  results.slint  styles.slint  types.slint
(+36 files in other folders)
