[project]
name = "LicenseWise"
version = "0.1.0"
description = "KBS License Advisor"
requires-python = ">=3.10"
dependencies = [
    "pyswip",
]

[project.optional-dependencies]
gui = ["slint==1.17.0b2"]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
